<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dashboardFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/mapFragment"
        android:icon="@drawable/ic_map"
        android:title="@string/nav_map" />
    <item
        android:id="@+id/exerciseFragment"
        android:icon="@drawable/ic_exercise"
        android:title="@string/nav_exercise" />
    <item
        android:id="@+id/dietFragment"
        android:icon="@drawable/ic_diet"
        android:title="@string/nav_diet" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />
</menu>
